data/derived/comb/progs/unify/prog7924.ml.out
Characters 25-26:
  let _ = eval (VarX, 0.5, 0);;
                           ^
Error: This expression has type int but an expression was expected of type
         float
